--- a/index.html
+++ b/index.html
@@ -1,233 +1,171 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-<title>2D Football Mobile</title>
+<title>Footblaze Mobile</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-body{margin:0;overflow:hidden;background:#000;font-family:Arial}
-canvas{background:#1f7a3a;display:block}
+  body {
+    margin: 0;
+    overflow: hidden;
+    background: #0b6623;
+    font-family: Arial, sans-serif;
+  }
 
-/* UI */
-button{
-  position:fixed;
-  padding:12px 18px;
-  font-size:16px;
-  border:none;
-  border-radius:8px;
-}
-#startBtn{top:50%;left:50%;transform:translate(-50%,-50%)}
-#pauseBtn{top:10px;right:10px}
+  #ui {
+    position: fixed;
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    color: white;
+    font-size: 18px;
+    background: rgba(0,0,0,0.5);
+    padding: 8px 16px;
+    border-radius: 10px;
+    z-index: 10;
+  }
 
-/* Stamina */
-#stamina{
-  position:fixed;
-  top:10px;left:10px;
-  width:120px;height:10px;
-  background:#333;
-}
-#staminaFill{
-  height:100%;
-  background:#4caf50;
-}
-
-/* Joystick */
-#joyBase{
-  position:fixed;
-  left:20px;bottom:20px;
-  width:140px;height:140px;
-  border-radius:50%;
-  background:rgba(255,255,255,.15);
-}
-#joyStick{
-  position:absolute;
-  left:50px;top:50px;
-  width:40px;height:40px;
-  border-radius:50%;
-  background:white;
-}
-
-/* Action buttons */
-.action{
-  position:fixed;
-  width:70px;height:70px;
-  border-radius:50%;
-  background:rgba(255,255,255,.3);
-  color:white;
-  font-weight:bold;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-}
-#pass{right:110px;bottom:50px}
-#shoot{right:20px;bottom:120px}
-#sprint{right:20px;bottom:40px}
+  canvas {
+    display: block;
+  }
 </style>
 </head>
 <body>
 
-<canvas id="game"></canvas>
-
-<button id="startBtn">START MATCH</button>
-<button id="pauseBtn" style="display:none">PAUSE</button>
-
-<div id="stamina" style="display:none"><div id="staminaFill"></div></div>
-
-<div id="joyBase" style="display:none">
-  <div id="joyStick"></div>
+<div id="ui">
+  <span id="score">Blue 0 - 0 Red</span> |
+  <span id="timer">03:00</span> |
+  <span id="half">1st Half</span>
 </div>
 
-<div id="pass" class="action" style="display:none">PASS</div>
-<div id="shoot" class="action" style="display:none">SHOOT</div>
-<div id="sprint" class="action" style="display:none">SPRINT</div>
+<canvas id="game"></canvas>
 
 <script>
-const canvas=document.getElementById("game");
-const ctx=canvas.getContext("2d");
-canvas.width=innerWidth;
-canvas.height=innerHeight;
+const canvas = document.getElementById("game");
+const ctx = canvas.getContext("2d");
 
-/* STATE */
-let state="menu";
+canvas.width = window.innerWidth;
+canvas.height = window.innerHeight;
 
-/* WORLD */
-const world={w:2600,h:1600};
-const cam={x:0,y:0};
+// PITCH
+const pitch = { width: 3000, height: 1800 };
 
-/* BALL */
-const ball={x:1300,y:800,vx:0,vy:0,r:10};
+// CAMERA
+const camera = { x: 0, y: 0 };
 
-/* PLAYER */
-const player={
-  x:900,y:800,r:14,
-  speed:3.8,
-  sprint:6,
-  stamina:100,
-  dir:{x:1,y:0}
+// BALL
+const ball = { x: 1500, y: 900, r: 8 };
+
+// PLAYER (controlled)
+const player = {
+  x: 1500,
+  y: 1000,
+  r: 16,
+  speed: 4
 };
 
-/* CAMERA */
-function updateCamera(){
-  cam.x=player.x-canvas.width/2;
-  cam.y=player.y-canvas.height/2;
-  cam.x=Math.max(0,Math.min(cam.x,world.w-canvas.width));
-  cam.y=Math.max(0,Math.min(cam.y,world.h-canvas.height));
-}
+// SCORE & TIME
+let blueScore = 0;
+let redScore = 0;
+let half = 1;
+let timeLeft = 180; // 3 minutes
+let lastTime = Date.now();
 
-/* JOYSTICK */
-let joy={x:0,y:0};
-const base=document.getElementById("joyBase");
-const stick=document.getElementById("joyStick");
+// INPUT
+const keys = {};
+window.addEventListener("keydown", e => keys[e.key] = true);
+window.addEventListener("keyup", e => keys[e.key] = false);
 
-base.addEventListener("touchmove",e=>{
-  const r=base.getBoundingClientRect();
-  let dx=e.touches[0].clientX-(r.left+70);
-  let dy=e.touches[0].clientY-(r.top+70);
-  const d=Math.hypot(dx,dy);
-  if(d>50){dx*=50/d;dy*=50/d;}
-  joy.x=dx/50;
-  joy.y=dy/50;
-  stick.style.left=50+dx+"px";
-  stick.style.top=50+dy+"px";
-});
-base.addEventListener("touchend",()=>{
-  joy.x=joy.y=0;
-  stick.style.left="50px";
-  stick.style.top="50px";
-});
+// GAME LOOP
+function update() {
+  // PLAYER MOVEMENT
+  if (keys["ArrowUp"]) player.y -= player.speed;
+  if (keys["ArrowDown"]) player.y += player.speed;
+  if (keys["ArrowLeft"]) player.x -= player.speed;
+  if (keys["ArrowRight"]) player.x += player.speed;
 
-/* ACTIONS */
-let sprinting=false;
-pass.onclick=()=>kick(6);
-shoot.onclick=()=>kick(11);
-sprint.ontouchstart=()=>sprinting=true;
-sprint.ontouchend=()=>sprinting=false;
+  // CAMERA FOLLOWS PLAYER (SMOOTH)
+  camera.x += ((player.x - canvas.width/2) - camera.x) * 0.05;
+  camera.y += ((player.y - canvas.height/2) - camera.y) * 0.05;
 
-function kick(p){
-  const d=Math.hypot(ball.x-player.x,ball.y-player.y);
-  if(d<30){
-    ball.vx=player.dir.x*p;
-    ball.vy=player.dir.y*p;
+  camera.x = Math.max(0, Math.min(camera.x, pitch.width - canvas.width));
+  camera.y = Math.max(0, Math.min(camera.y, pitch.height - canvas.height));
+
+  // TIMER
+  const now = Date.now();
+  if (now - lastTime >= 1000) {
+    timeLeft--;
+    lastTime = now;
+
+    if (timeLeft <= 0) {
+      if (half === 1) {
+        half = 2;
+        timeLeft = 180;
+      } else {
+        alert("Match Ended!");
+        timeLeft = 0;
+      }
+    }
   }
 }
 
-/* DRAW PITCH */
-function drawPitch(){
-  ctx.strokeStyle="#fff";
-  ctx.lineWidth=2;
+function drawPitch() {
+  ctx.fillStyle = "#1e7f3b";
+  ctx.fillRect(-camera.x, -camera.y, pitch.width, pitch.height);
 
-  ctx.strokeRect(-cam.x,-cam.y,world.w,world.h);
+  ctx.strokeStyle = "white";
+  ctx.lineWidth = 5;
 
+  // Center line
   ctx.beginPath();
-  ctx.moveTo(world.w/2-cam.x,-cam.y);
-  ctx.lineTo(world.w/2-cam.x,world.h-cam.y);
+  ctx.moveTo(pitch.width/2 - camera.x, -camera.y);
+  ctx.lineTo(pitch.width/2 - camera.x, pitch.height - camera.y);
   ctx.stroke();
 
+  // Center circle
   ctx.beginPath();
-  ctx.arc(world.w/2-cam.x,world.h/2-cam.y,90,0,Math.PI*2);
+  ctx.arc(pitch.width/2 - camera.x, pitch.height/2 - camera.y, 120, 0, Math.PI * 2);
   ctx.stroke();
 }
 
-/* LOOP */
-function loop(){
-  if(state!=="playing")return;
-  ctx.clearRect(0,0,canvas.width,canvas.height);
+function draw() {
+  ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-  let speed=player.speed;
-  if(sprinting && player.stamina>0){
-    speed=player.sprint;
-    player.stamina-=0.6;
-  }else{
-    player.stamina=Math.min(100,player.stamina+0.4);
-  }
-  staminaFill.style.width=player.stamina+"%";
-
-  if(joy.x||joy.y){
-    const d=Math.hypot(joy.x,joy.y);
-    player.dir={x:joy.x/d,y:joy.y/d};
-    player.x+=player.dir.x*speed;
-    player.y+=player.dir.y*speed;
-  }
-
-  ball.x+=ball.vx;
-  ball.y+=ball.vy;
-  ball.vx*=0.98;
-  ball.vy*=0.98;
-
-  updateCamera();
   drawPitch();
 
-  ctx.fillStyle="white";
+  // BALL
+  ctx.fillStyle = "white";
   ctx.beginPath();
-  ctx.arc(ball.x-cam.x,ball.y-cam.y,10,0,Math.PI*2);
+  ctx.arc(ball.x - camera.x, ball.y - camera.y, ball.r, 0, Math.PI * 2);
   ctx.fill();
 
-  ctx.fillStyle="#1e90ff";
+  // PLAYER
+  ctx.fillStyle = "blue";
   ctx.beginPath();
-  ctx.arc(player.x-cam.x,player.y-cam.y,14,0,Math.PI*2);
+  ctx.arc(player.x - camera.x, player.y - camera.y, player.r, 0, Math.PI * 2);
   ctx.fill();
 
-  requestAnimationFrame(loop);
+  // UI
+  document.getElementById("score").innerText =
+    `Blue ${blueScore} - ${redScore} Red`;
+
+  document.getElementById("half").innerText =
+    half === 1 ? "1st Half" : "2nd Half";
+
+  const min = Math.floor(timeLeft / 60);
+  const sec = timeLeft % 60;
+  document.getElementById("timer").innerText =
+    `${String(min).padStart(2,"0")}:${String(sec).padStart(2,"0")}`;
 }
 
-/* UI */
-startBtn.onclick=()=>{
-  state="playing";
-  startBtn.style.display="none";
-  pauseBtn.style.display="block";
-  stamina.style.display="block";
-  joyBase.style.display="block";
-  pass.style.display="flex";
-  shoot.style.display="flex";
-  sprint.style.display="flex";
-  loop();
-};
+function gameLoop() {
+  update();
+  draw();
+  requestAnimationFrame(gameLoop);
+}
 
-pauseBtn.onclick=()=>{
-  state=state==="playing"?"paused":"playing";
-  pauseBtn.textContent=state==="paused"?"RESUME":"PAUSE";
-  if(state==="playing")loop();
-};
+gameLoop();
 </script>
 </body>
 </html>
+
