--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
 <title>Footblaze Mobile</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <style>
+ 
+ #rotateScreen{
+ position:fixed;
+ top:0;left:0;
+ width:100vw;height:100vh;
+ background:#000;
+ color:white;
+ display:flex;
+ align-items:center;
+ justify-content:center;
+ font-size:24px;
+ text-align:center;
+ z-index:9999;
+}
+
+@media (orientation: landscape){
+ #rotateScreen{display:none;}
+}
+
 body{margin:0;overflow:hidden;background:#0b6623;font-family:Arial}
 canvas{display:block;touch-action:none}
 
@@ -61,7 +80,14 @@ canvas{display:block;touch-action:none}
 </head>
 <body>
 
-<div id="topUI">
+<div id="rotateScreen">
+  <div>
+    🔄 Rotate your phone<br>
+    <small>Landscape mode required</small>
+  </div>
+</div>
+
+ <div id="topUI">
 <span id="score">0 - 0</span> |
 <span id="time">03:00</span> |
 <span id="half">1st</span>
@@ -77,7 +103,15 @@ canvas{display:block;touch-action:none}
 <canvas id="game"></canvas>
 
 <script>
-/* CANVAS */
+
+ function resizeCanvas(){
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+}
+window.addEventListener("resize", resizeCanvas);
+resizeCanvas();
+
+ /* CANVAS */
 const canvas=document.getElementById("game");
 const ctx=canvas.getContext("2d");
 canvas.width=innerWidth;
