--- a/index.html
+++ b/index.html
@@ -1,340 +1,166 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 <meta charset="UTF-8">
-<title>Footblaze Mobile</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+<title>Footblaze FC Mobile</title>
+<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
 <style>
- 
- #rotateScreen{
- position:fixed;
- top:0;left:0;
- width:100vw;height:100vh;
- background:#000;
- color:white;
- display:flex;
- align-items:center;
- justify-content:center;
- font-size:24px;
- text-align:center;
- z-index:9999;
-}
-
-@media (orientation: landscape){
- #rotateScreen{display:none;}
-}
-
-body{margin:0;overflow:hidden;background:#0b6623;font-family:Arial}
-canvas{display:block;touch-action:none}
+html,body{margin:0;overflow:hidden;background:#0b6623;font-family:sans-serif}
+canvas{display:block}
 
 /* UI */
-#topUI{
- position:fixed;top:8px;left:50%;
- transform:translateX(-50%);
- background:rgba(0,0,0,.6);
- color:white;padding:8px 14px;
- border-radius:12px;font-size:14px;z-index:10
-}
-#pause{position:fixed;top:8px;right:10px;
- background:rgba(0,0,0,.6);color:white;
- padding:10px;border-radius:50%;z-index:10}
-
-/* Buttons */
-.btn{
- position:fixed;bottom:60px;
- width:70px;height:70px;
- border-radius:50%;
- background:rgba(255,255,255,.2);
- color:white;font-weight:bold;
- display:flex;align-items:center;justify-content:center;
-}
-#pass{right:140px}
-#shoot{right:50px;bottom:140px}
-#sprint{right:50px}
-
-/* Joystick */
-#joyBase{
- position:fixed;left:40px;bottom:60px;
- width:120px;height:120px;
- border-radius:50%;
- background:rgba(255,255,255,.15)
-}
-#joyStick{
- position:absolute;left:40px;top:40px;
- width:40px;height:40px;border-radius:50%;
- background:rgba(255,255,255,.5)
-}
-
-/* Stamina */
-#staminaBar{
- position:fixed;bottom:10px;left:50%;
- transform:translateX(-50%);
- width:200px;height:8px;
- background:#444;border-radius:5px
-}
-#stamina{
- height:100%;width:100%;
- background:lime;border-radius:5px
-}
+#ui{position:fixed;top:10px;left:50%;transform:translateX(-50%);
+color:white;font-size:18px;z-index:5}
+#menu,#rotate{
+position:fixed;inset:0;display:flex;
+align-items:center;justify-content:center;
+background:#000;color:white;z-index:10;flex-direction:column}
+button{font-size:22px;padding:12px 30px;border-radius:12px;border:none}
+#rotate{display:none}
+@media (orientation:portrait){#rotate{display:flex}}
 </style>
 </head>
+
 <body>
 
-<div id="rotateScreen">
-  <div>
-    🔄 Rotate your phone<br>
-    <small>Landscape mode required</small>
-  </div>
+<div id="rotate">Rotate device to landscape</div>
+
+<div id="menu">
+<h1>⚽ Footblaze FC</h1>
+<button id="startBtn">START MATCH</button>
 </div>
 
- <div id="topUI">
-<span id="score">0 - 0</span> |
-<span id="time">03:00</span> |
-<span id="half">1st</span>
-</div>
-<div id="pause">⏸</div>
-
-<div id="joyBase"><div id="joyStick"></div></div>
-<div id="pass" class="btn">PASS</div>
-<div id="shoot" class="btn">SHOOT</div>
-<div id="sprint" class="btn">SPRINT</div>
-<div id="staminaBar"><div id="stamina"></div></div>
-
+<div id="ui"></div>
 <canvas id="game"></canvas>
 
 <script>
+/* ================= CORE ================= */
+const canvas = document.getElementById("game");
+const ctx = canvas.getContext("2d");
+function resize(){canvas.width=innerWidth;canvas.height=innerHeight}
+addEventListener("resize",resize);resize();
 
- function resizeCanvas(){
-  canvas.width = window.innerWidth;
-  canvas.height = window.innerHeight;
+/* ================= GAME STATE ================= */
+const State={MENU:0,PLAY:1,PAUSE:2,HALF:3,END:4};
+let gameState=State.MENU;
+
+/* ================= MATCH ================= */
+let half=1;
+let timeLeft=180;
+let scoreBlue=0,scoreRed=0;
+
+/* ================= WORLD ================= */
+const pitch={w:3000,h:1800};
+let camera={x:0,y:0};
+
+/* ================= ENTITIES ================= */
+function Player(x,y,team){
+this.x=x;this.y=y;this.team=team;
+this.r=12;this.speed=220;
+this.stamina=100;this.hasBall=false;
 }
-window.addEventListener("resize", resizeCanvas);
-resizeCanvas();
+Player.prototype.update=function(dt,input){
+if(this.team==="blue" && input){
+this.x+=input.x*this.speed*dt;
+this.y+=input.y*this.speed*dt;
+}
+};
+Player.prototype.draw=function(){
+ctx.fillStyle=this.team==="blue"?"#1e90ff":"#ff3333";
+ctx.beginPath();
+ctx.arc(this.x-camera.x,this.y-camera.y,this.r,0,Math.PI*2);
+ctx.fill();
+};
 
- /* CANVAS */
-const canvas=document.getElementById("game");
-const ctx=canvas.getContext("2d");
-canvas.width=innerWidth;
-canvas.height=innerHeight;
-
-/* FIELD */
-const pitch={w:4000,h:2200};
-const cam={x:0,y:0};
-
-/* BALL */
-const ball={x:2000,y:1100,vx:0,vy:0,r:8};
-
-/* MATCH */
-let time=180,half=1,last=Date.now();
-let blueScore=0,redScore=0;
-let paused=false;
-
-/* FORMATION 4-3-3 (BLUE) */
-const formation=[
- {x:300,y:1100,role:"GK"},
- {x:700,y:500},{x:700,y:900},{x:700,y:1300},{x:700,y:1700},
- {x:1200,y:700},{x:1200,y:1100},{x:1200,y:1500},
- {x:1700,y:600},{x:1700,y:1100},{x:1700,y:1600}
-];
-
-const blue=formation.map(f=>({
- x:f.x,y:f.y,r:14,
- homeX:f.x,homeY:f.y,
- role:f.role||"P",
- stamina:100
-}));
-
-let controlled=10; // CF
-
-/* RED TEAM */
-const red=[];
-for(let i=0;i<7;i++){
- red.push({x:2600,y:600+i*200,r:14});
+/* ================= BALL ================= */
+const ball={x:pitch.w/2,y:pitch.h/2,vx:0,vy:0};
+function updateBall(dt){
+ball.x+=ball.vx*dt;
+ball.y+=ball.vy*dt;
+ball.vx*=0.98;ball.vy*=0.98;
 }
 
-/* GOALS */
-const goalLeft={x:0,y:900,w:40,h:400};
-const goalRight={x:pitch.w-40,y:900,w:40,h:400};
+/* ================= TEAMS ================= */
+const blue=[],red=[];
+for(let i=0;i<11;i++){
+blue.push(new Player(600+i*40,400+i*30,"blue"));
+red.push(new Player(2200-i*40,400+i*30,"red"));
+}
 
-/* JOYSTICK */
-let joy={dx:0,dy:0,active:false};
-const joyBase=document.getElementById("joyBase");
-const joyStick=document.getElementById("joyStick");
-
-joyBase.addEventListener("touchstart",()=>joy.active=true);
-joyBase.addEventListener("touchmove",e=>{
- if(!joy.active)return;
- const r=joyBase.getBoundingClientRect();
- const t=e.touches[0];
- joy.dx=(t.clientX-(r.left+60))/25;
- joy.dy=(t.clientY-(r.top+60))/25;
- joyStick.style.left=40+joy.dx*10+"px";
- joyStick.style.top=40+joy.dy*10+"px";
+/* ================= INPUT ================= */
+let input={x:0,y:0};
+addEventListener("keydown",e=>{
+if(e.key==="ArrowUp")input.y=-1;
+if(e.key==="ArrowDown")input.y=1;
+if(e.key==="ArrowLeft")input.x=-1;
+if(e.key==="ArrowRight")input.x=1;
 });
-joyBase.addEventListener("touchend",()=>{
- joy.active=false;joy.dx=joy.dy=0;
- joyStick.style.left="40px";
- joyStick.style.top="40px";
-});
+addEventListener("keyup",()=>input={x:0,y:0});
 
-/* BUTTONS */
-document.getElementById("pause").onclick=()=>paused=!paused;
-
-document.getElementById("pass").onclick=()=>{
- let nearest=null,min=9999;
- blue.forEach((p,i)=>{
-  if(i===controlled)return;
-  const d=Math.hypot(p.x-blue[controlled].x,p.y-blue[controlled].y);
-  if(d<min){min=d;nearest=p;}
- });
- if(nearest){
-  ball.vx=(nearest.x-ball.x)*0.08;
-  ball.vy=(nearest.y-ball.y)*0.08;
- }
-};
-
-document.getElementById("shoot").ontouchstart=()=>{
- ball.vx=(blue[controlled].x-ball.x)*0.3;
- ball.vy=(blue[controlled].y-ball.y)*0.3;
-};
-
-document.getElementById("sprint").ontouchstart=()=>{
- blue[controlled].speed=6;
-};
-document.getElementById("sprint").ontouchend=()=>{
- blue[controlled].speed=4;
-};
-
-/* PLAYER SWITCH (TAP) */
-canvas.addEventListener("touchstart",e=>{
- const t=e.touches[0];
- blue.forEach((p,i)=>{
-  const sx=p.x-cam.x, sy=p.y-cam.y;
-  if(Math.hypot(t.clientX-sx,t.clientY-sy)<30){
-   controlled=i;
-  }
- });
-});
-
-/* UPDATE */
-function update(){
- if(paused)return;
-
- const p=blue[controlled];
- p.speed=p.speed||4;
- p.x+=joy.dx*p.speed;
- p.y+=joy.dy*p.speed;
-
- // RETURN TO FORMATION
- blue.forEach((pl,i)=>{
-  if(i!==controlled){
-   pl.x+=(pl.homeX-pl.x)*0.01;
-   pl.y+=(pl.homeY-pl.y)*0.01;
-  }
- });
-
- // BALL
- ball.x+=ball.vx;
- ball.y+=ball.vy;
- ball.vx*=0.97;
- ball.vy*=0.97;
-
- // GK AI
- const gk=blue[0];
- gk.y+=(ball.y-gk.y)*0.05;
- if(Math.hypot(ball.x-gk.x,ball.y-gk.y)<40){
-  ball.vx=8; ball.vy=(Math.random()-0.5)*6;
- }
-
- // RED AI
- red.forEach(r=>{
-  r.x+=(ball.x-r.x)*0.002;
-  r.y+=(ball.y-r.y)*0.002;
- });
-
- // GOALS
- if(ball.x<goalLeft.x+goalLeft.w &&
-    ball.y>goalLeft.y && ball.y<goalLeft.y+goalLeft.h){
-  redScore++; reset();
- }
- if(ball.x>goalRight.x &&
-    ball.y>goalRight.y && ball.y<goalRight.y+goalRight.h){
-  blueScore++; reset();
- }
-
- // CAMERA
- cam.x+=(p.x-canvas.width/2-cam.x)*0.05;
- cam.y+=(p.y-canvas.height/2-cam.y)*0.05;
- cam.x=Math.max(0,Math.min(cam.x,pitch.w-canvas.width));
- cam.y=Math.max(0,Math.min(cam.y,pitch.h-canvas.height));
-
- // TIMER
- if(Date.now()-last>1000){
-  time--;last=Date.now();
-  if(time<=0){
-   if(half===1){half=2;time=180}
-   else alert("Match Ended");
-  }
- }
+/* ================= CAMERA ================= */
+function updateCamera(){
+camera.x=ball.x-canvas.width/2;
+camera.y=ball.y-canvas.height/2;
+camera.x=Math.max(0,Math.min(camera.x,pitch.w-canvas.width));
+camera.y=Math.max(0,Math.min(camera.y,pitch.h-canvas.height));
 }
 
-/* RESET */
-function reset(){
- ball.x=2000;ball.y=1100;
- ball.vx=ball.vy=0;
- blue.forEach(p=>{p.x=p.homeX;p.y=p.homeY});
+/* ================= MATCH LOGIC ================= */
+function updateMatch(dt){
+if(gameState!==State.PLAY)return;
+timeLeft-=dt;
+if(timeLeft<=0){
+if(half===1){half=2;timeLeft=180;gameState=State.HALF}
+else gameState=State.END;
+}
 }
 
-/* DRAW */
-function draw(){
- ctx.clearRect(0,0,canvas.width,canvas.height);
-
- // FIELD
- ctx.fillStyle="#1e7f3b";
- ctx.fillRect(-cam.x,-cam.y,pitch.w,pitch.h);
- ctx.strokeStyle="white";
- ctx.strokeRect(-cam.x,-cam.y,pitch.w,pitch.h);
-
- // GOALS
- ctx.fillRect(goalLeft.x-cam.x,goalLeft.y-cam.y,goalLeft.w,goalLeft.h);
- ctx.fillRect(goalRight.x-cam.x,goalRight.y-cam.y,goalRight.w,goalRight.h);
-
- // BALL
- ctx.beginPath();
- ctx.arc(ball.x-cam.x,ball.y-cam.y,ball.r,0,7);
- ctx.fill();
-
- // PLAYERS
- blue.forEach((pl,i)=>{
-  ctx.fillStyle="blue";
-  ctx.beginPath();
-  ctx.arc(pl.x-cam.x,pl.y-cam.y,pl.r,0,7);
-  ctx.fill();
-
-  if(i===controlled){
-   ctx.strokeStyle="yellow";
-   ctx.beginPath();
-   ctx.arc(pl.x-cam.x,pl.y-cam.y,pl.r+6,0,7);
-   ctx.stroke();
-  }
- });
-
- ctx.fillStyle="red";
- red.forEach(r=>{
-  ctx.beginPath();
-  ctx.arc(r.x-cam.x,r.y-cam.y,r.r,0,7);
-  ctx.fill();
- });
-
- document.getElementById("score").innerText=`${blueScore} - ${redScore}`;
- document.getElementById("time").innerText=
- `${String(Math.floor(time/60)).padStart(2,"0")}:${String(time%60).padStart(2,"0")}`;
- document.getElementById("half").innerText=half===1?"1st":"2nd";
+/* ================= DRAW ================= */
+function drawPitch(){
+ctx.fillStyle="#2e8b57";
+ctx.fillRect(-camera.x,-camera.y,pitch.w,pitch.h);
+ctx.strokeStyle="white";ctx.lineWidth=4;
+ctx.beginPath();
+ctx.moveTo(pitch.w/2-camera.x,0-camera.y);
+ctx.lineTo(pitch.w/2-camera.x,pitch.h-camera.y);
+ctx.stroke();
+}
+function drawUI(){
+document.getElementById("ui").innerText=
+`Blue ${scoreBlue} - ${scoreRed} Red | Half ${half} | ${Math.ceil(timeLeft)}s`;
 }
 
-/* LOOP */
-function loop(){update();draw();requestAnimationFrame(loop)}
-loop();
+/* ================= GAME LOOP (FC METHOD) ================= */
+let last=0;
+function loop(t){
+const dt=(t-last)/1000;last=t;
+
+if(gameState===State.PLAY){
+updateMatch(dt);
+blue[0].update(dt,input);
+updateBall(dt);
+updateCamera();
+}
+
+ctx.clearRect(0,0,canvas.width,canvas.height);
+drawPitch();
+blue.forEach(p=>p.draw());
+red.forEach(p=>p.draw());
+ctx.fillStyle="white";
+ctx.beginPath();
+ctx.arc(ball.x-camera.x,ball.y-camera.y,6,0,Math.PI*2);
+ctx.fill();
+drawUI();
+
+requestAnimationFrame(loop);
+}
+loop(0);
+
+/* ================= UI ================= */
+document.getElementById("startBtn").onclick=()=>{
+document.getElementById("menu").style.display="none";
+gameState=State.PLAY;
+};
 </script>
 </body>
 </html>
